Cilium/secret.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hubble-cert-refresher
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cert-refresher
  template:
    metadata:
      labels:
        app: cert-refresher
    spec:
      serviceAccountName: hubble-sa
      containers:
        - name: refresher
          image: busybox
          command: ["sleep", "3600"]
          volumeMounts:
            - name: secrets-store
              mountPath: /mnt/secrets-store
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "hubble-cert-kv"
