Cilium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: hubble-ingress
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
    - host: hubble.devops-tool.com
      http:
        paths:
          - backend:
              service:
                name: hubble-ui
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hubble.devops-tool.com
      secretName: hubble-ingress-tls
